# fraud-detection-platform

./: README.md
backend/: pom.xml
backend/src/main/resources/: application.properties  data.sql  transactions.json
fraud-engine/: features.py  main.py  models.py  pyproject.toml
fraud-engine/routes/: analyze.py  predict.py
frontend/: angular.json  package-lock.json  package.json
frontend/src/app/: app.component.ts  app.routes.ts
frontend/src/app/admin-dashboard/: admin-dashboard.component.html  admin-dashboard.component.ts
frontend/src/app/core/: README.md
frontend/src/app/core/guards/: auth.guard.ts  index.ts
frontend/src/app/core/interceptors/: auth.interceptor.ts
frontend/src/app/dashboard/: dashboard.component.css  dashboard.component.html  dashboard.component.ts
frontend/src/app/features/: README.md
frontend/src/app/high-risk-alerts/: high-risk-alerts.component.html  high-risk-alerts.component.ts
frontend/src/app/login/: login.component.html  login.component.ts
frontend/src/app/not-found/: not-found.component.html  not-found.component.ts
frontend/src/app/pages/: README.md
frontend/src/app/permissions/: permissions.component.html  permissions.component.ts
frontend/src/app/settings/: settings.component.html  settings.component.ts
frontend/src/app/shared/: README.md
frontend/src/app/transaction-details/: transaction-details.component.html  transaction-details.component.ts
frontend/src/app/user-create/: user-create.component.html  user-create.component.ts
frontend/src/app/user-edit/: user-edit.component.html  user-edit.component.ts
(+47 files in other folders)
